# live-transcript

./: .gitignore  LICENSE  README.md  SETUP.md  pyproject.toml  research1.md  research2.md
data/sessions/2026-03-16_00-31-40/: transcript.txt  transcript_with_timestamps.txt
data/sessions/2026-03-16_00-33-57/: transcript.txt  transcript_with_timestamps.txt
scripts/: verify_gpu.py
src/whisper_transcriber/: __main__.py  bootstrap.py
src/whisper_transcriber/audio/: accumulator.py  capture.py  devices.py  mixer.py  resampler.py
src/whisper_transcriber/config/: settings.py
src/whisper_transcriber/io/: paths.py  transcript_writer.py
src/whisper_transcriber/logging/: log_bridge.py  log_setup.py
src/whisper_transcriber/stt/: chunk_merger.py  whisper_engine.py  worker.py
src/whisper_transcriber/ui/: audio_meter.py  log_view.py  main_window.py  signals.py  status_bar.py  status_view.py  theme.py  transcript_view.py
tests/: conftest.py  test_chunk_merger.py  test_paths.py  test_resampler.py  test_settings.py  test_transcript_writer.py
transcripts/[16-03-26] - [15-00]/: transcript.txt  transcript_with_timestamps.txt
