[project]
name = "whisper-transcriber"
version = "0.1.0"
description = "Windows desktop app for real-time system audio transcription using faster-whisper"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
dependencies = [
    "faster-whisper>=1.2.1,<2",
    "torch>=2.9.1,<3",
    "PySide6>=6.8,<7",
    "PyAudioWPatch>=0.2.12,<1",
    "numpy>=1.26,<3",
    "scipy>=1.12,<2",
    "nvidia-cublas-cu12>=12.8",
    "nvidia-cudnn-cu12>=9.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "ruff>=0.11",
    "mypy>=1.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_transcriber"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF", "PERF"]
ignore = ["E501", "SIM108", "SIM105"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "B011"]
"src/whisper_transcriber/ui/*.py" = ["N802"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["faster_whisper.*", "pyaudiowpatch.*", "ctranslate2.*", "scipy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-v", "--tb=short", "--strict-markers", "--timeout=10"]
markers = [
    "slow: marks tests as slow",
    "gpu: marks tests requiring CUDA GPU",
]
